# ECAT

./: .gitignore  .gitmodules  CITATION.cff  Install.md  LICENSE  Okada4py_install.md  README.md  ReadMe_Install.md  conda-requirements-cross-platform.txt  conda-requirements-linux-64.txt  conda-requirements-win-64.txt  conda-requirements.txt  download_cases.sh  install.bat  install.sh  pip-requirements-cross-platform.txt  pip-requirements-linux-64.txt  pip-requirements-win-64.txt  pip-requirements.txt
csi_cutde_mpiparallel/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
csi_cutde_mpiparallel/csi/: Fault.py  PSGRNCmp.py  Pressure.py  RectangularPatches.py  Sbarbot.py  SourceInv.py  TriangularPatches.py  TriangularTents.py  __init__.py  crossfaultoffset.py  csiutils.py  dippingfault.py  explorefault.py  fault3D.py  faultpostproc.py  faultpostproctents.py  faultwithdip.py  faultwithlistric.py  faultwithvaryingdip.py  findTriFaultEdges.py  geodeticplot.py  gf_options.py  gps.py  gpstimeseries.py  imagecovariance.py  imagedownsampling.py  imagedownsamplingTriangular.py  insar.py  insartimeseries.py  leveling.py  multifaultsolve.py  multifaultsolve_boundLSE.py  multifaultsolve_raw.py  multigps.py  opticorr.py  planarfault.py  projection.py  sbarbotfull.py  seismic_clustering.py  seismiclocations.py  (+7 more)
csi_cutde_mpiparallel/csi/cli_tools/: psgrn_cli.py
csi_cutde_mpiparallel/csi/edge_utils/: __init__.py  fault_edge_reconstruction.py  patch_edge_finder.py  topology_boundary.py
csi_cutde_mpiparallel/psgrn_pscmp/: fomosto_psgrn2008a  pscmp_template.inp
(+441 files in other folders)
